// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HomePage HomePage content checks when auth is disabled should match content 1`] = `
"
  <div class="govuk-grid-row">
    <div class="govuk-grid-column-two-thirds">
      <div class="govuk-body" data-testid="app-page-body">
        <div class="govuk-!-margin-top-0 govuk-!-margin-bottom-8">
          <h1 class="govuk-heading-l">Move animals under disease controls</h1>
        </div>
        <p class="govuk-body">
          Use this service to apply for a movement licence during a foot and
          mouth disease outbreak.
        </p>
        <h3 class="govuk-heading-m">What you can apply for</h3>
        <p class="govuk-body">
          You can use this service to apply for a licence for the following
          activities:
        </p>
        <ul class="govuk-list govuk-list--bullet">
          <li>movement of live animals on or off your premises</li>
          <li>on-farm slaughter</li>
          <li>movement of carcasses</li>
          <li>movement of milk</li>
        </ul>
        <h3 class="govuk-heading-m">Before you start</h3>
        <p class="govuk-body">
          APHA need these details to process your application:
        </p>
        <ul class="govuk-list govuk-list--bullet">
          <li>details about the origin premises</li>
          <li>animal ID numbers</li>
          <li>dates of the activity</li>
        </ul>
        <a href="/fmd/task-list" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button" data-testid="start-now-btn">
  Start now
  <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" aria-hidden="true" focusable="false">
    <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z"></path>
  </svg>
</a>
        <h3 class="govuk-heading-m">Using and sharing your information</h3>
        <p class="govuk-body">
          How we use your personal data is set out in the
          <a href="https://www.gov.uk/government/publications/animal-and-plant-heath-agency-privacy-notices/exotic-notifiable-and-reportable-diseases-privacy-notice#:~:text=APHA%20may%20share%20data%20with,is%20identified%20at%20the%20laboratory." class="govuk-link" target="_blank">exotic, notifiable and reportable diseases privacy notice (opens in
            a new tab)</a>
          .
        </p>
        <h3 class="govuk-heading-m">Get help</h3>
        <p class="govuk-body">
          If you need help using the service you can call 03000 200 301. Lines
          are open from Monday to Friday between 8.30am and 5pm.
        </p>
      </div>
    </div>
  </div>
        "
`;

exports[`HomePage HomePage content checks when auth is enabled should match content 1`] = `
"
  <div class="govuk-grid-row">
    <div class="govuk-grid-column-two-thirds">
      <div class="govuk-body" data-testid="app-page-body">
        <div class="govuk-!-margin-top-0 govuk-!-margin-bottom-8">
          <h1 class="govuk-heading-l">Move animals under disease controls</h1>
        </div>
        <p class="govuk-body">
          Use this service to apply for a movement licence during a foot and
          mouth disease outbreak.
        </p>
        <h3 class="govuk-heading-m">What you can apply for</h3>
        <p class="govuk-body">
          You can use this service to apply for a licence for the following
          activities:
        </p>
        <ul class="govuk-list govuk-list--bullet">
          <li>movement of live animals on or off your premises</li>
          <li>on-farm slaughter</li>
          <li>movement of carcasses</li>
          <li>movement of milk</li>
        </ul>
        <h3 class="govuk-heading-m">Before you start</h3>
        <p class="govuk-body">
          APHA need these details to process your application:
        </p>
        <ul class="govuk-list govuk-list--bullet">
          <li>details about the origin premises</li>
          <li>animal ID numbers</li>
          <li>dates of the activity</li>
        </ul>
          <h3 class="govuk-heading-m">Signing into the service</h3>
          <p class="govuk-body">
            You need a Defra account to use this service. You can register for
            one using your Government Gateway sign in details.
          </p>
          <p class="govuk-body">
            After you sign in you need to enter your contact information, and
            details about your business if you have one.
          </p>
        <a href="/fmd/task-list" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button" data-testid="start-now-btn">
  Start now
  <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" aria-hidden="true" focusable="false">
    <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z"></path>
  </svg>
</a>
        <h3 class="govuk-heading-m">Using and sharing your information</h3>
        <p class="govuk-body">
          How we use your personal data is set out in the
          <a href="https://www.gov.uk/government/publications/animal-and-plant-heath-agency-privacy-notices/exotic-notifiable-and-reportable-diseases-privacy-notice#:~:text=APHA%20may%20share%20data%20with,is%20identified%20at%20the%20laboratory." class="govuk-link" target="_blank">exotic, notifiable and reportable diseases privacy notice (opens in
            a new tab)</a>
          .
        </p>
        <h3 class="govuk-heading-m">Get help</h3>
        <p class="govuk-body">
          If you need help using the service you can call 03000 200 301. Lines
          are open from Monday to Friday between 8.30am and 5pm.
        </p>
      </div>
    </div>
  </div>
        "
`;
